--- a/fastlane/metadata/fi/release_notes.txt
+++ b/fastlane/metadata/fi/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• Tämä päivitys korjaa virheen, joka sai hetkellisesti käynnistysnäytön näkymään kirkkaalla taustalla, vaikka Tumma teema oli valittuna.
+• Nyt kun lähetät nopean vastauksen viestiin painamalla Signalin ilmoitusta pitkään, vastauksesi lähetetään lainattuna vastauksena.
