--- a/fastlane/metadata/id/release_notes.txt
+++ b/fastlane/metadata/id/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• Pembaruan ini memperbaiki bug yang menyebabkan layar tampak terang meskipun Anda telah memilih Tema Gelap. Kalau Anda masih merayakan Hari Valentine dan suka suasana yang lebih romantis dan remang-remang, sebaiknya nyalakan lilin saja.
+• Sekarang, ketika Anda membalas pesan tertentu dengan menekan lama notifikasi Signal, respons Anda akan dikirimkan sebagai balasan yang dikutip.
