--- a/fastlane/metadata/no/release_notes.txt
+++ b/fastlane/metadata/no/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• Denne oppdateringen fikser en feil som førte til at oppstartssiden hadde en lys bakgrunn selv om mørkt tema var valgt.
+• Når du svarer på en spesifikk melding ved å trykke og holde på varslet fra Signal, sendes svaret ditt som et sitert svar.
