--- a/fastlane/metadata/sv/release_notes.txt
+++ b/fastlane/metadata/sv/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• Denna uppdatering åtgärdar en bugg som kortvarigt gjorde att startskärmen visades med en ljus bakgrund även när det mörka temat var valt.
+• Nu när du skickar ett snabbt svar på ett specifikt meddelande genom att länge trycka på en Signal-avisering kommer ditt svar att skickas som ett citatsvar.
