--- a/fastlane/metadata/th/release_notes.txt
+++ b/fastlane/metadata/th/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• รุ่นอัปเดตนี้มาพร้อมการแก้ไขบั๊กที่เคยทำให้ภาพพื้นหลังของหน้าจอเริ่มต้นปรากฏเป็นโทนสว่าง แม้ว่าคุณจะเลือกใช้ธีมมืดไว้ก็ตาม
+• ตอบข้อความได้อย่างทันใจด้วยการแตะค้างตรงการแจ้งเตือนข้อความนั้นของ Signal แล้วผู้รับจะเห็นข้อความของคุณในรูปแบบการตอบกลับข้อความ
