--- a/fastlane/metadata/fr-FR/release_notes.txt
+++ b/fastlane/metadata/fr-FR/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• Résoudre des bugs ? On aime ça un peu, beaucoup, passionnément, À LA FOLIE ! Vous avez peut-être remarqué que l'écran de démarrage s'affichait sur fond clair même lorsque le thème sombre était activé. Signal a beau mériter d'être sous le feu des projecteurs, en cette Saint-Valentin, on préfère les ambiances tamisées.
+• Et lorsque vous appuyez de manière prolongée sur une notification Signal pour répondre à un message, celui-ci est maintenant cité dans votre réponse.
