--- a/fastlane/metadata/hr/release_notes.txt
+++ b/fastlane/metadata/hr/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• Ovo ažuriranje ispravlja programsku pogrešku koja je nakratko uzrokovala pojavljivanje zaslona za pokretanje sa svijetlom pozadinom čak i kada je bila odabrana tamna tema.
+• Sada kada pošaljete brzi odgovor na određenu poruku dugim pritiskom na obavijest Signala, vaš će se odgovor poslati kao citirani odgovor.
