--- a/fastlane/metadata/nl-NL/release_notes.txt
+++ b/fastlane/metadata/nl-NL/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• Deze update lost een bug op die ervoor zorgde dat het startscherm kort werd weergegeven met een lichte achtergrond, zelfs als het donkere thema was geselecteerd.
+• Wanneer je nu een snel antwoord op een specifiek bericht stuurt door lang op een Signal-melding te drukken, wordt je antwoord verzonden als een geciteerd antwoord.
