--- a/fastlane/metadata/pt-BR/release_notes.txt
+++ b/fastlane/metadata/pt-BR/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• Esta atualização corrige um erro que fazia a tela inicial exibir brevemente um fundo claro, mesmo com o tema escuro ativado.
+• Agora, ao responder rapidamente a uma mensagem específica em uma notificação do Signal, sua resposta será enviada como uma citação. 
