--- a/fastlane/metadata/pt-PT/release_notes.txt
+++ b/fastlane/metadata/pt-PT/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• Esta atualização corrige um erro que fazia com que o ecrã inicial aparecesse brevemente com um fundo brilhante, mesmo quando o Modo Escuro estava selecionado.
+• Agora, quando enviar uma resposta rápida a uma mensagem específica mantendo premida uma notificação do Signal, a sua resposta será enviada como uma resposta citada.
