--- a/fastlane/metadata/ro/release_notes.txt
+++ b/fastlane/metadata/ro/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• Această actualizare remediază o eroare care a cauzat pentru scurt timp ecranul de lansare să apară cu un fundal luminos, chiar și atunci când modul întunecat a fost selectat. Dacă te-a inspirat Ziua îndrăgostiților și vrei să reduci luminozitatea și mai mult, îți recomandăm lumina lumânărilor.
+• Acum, când trimiți un răspuns rapid la un anumit mesaj apăsând lung pe o notificare Signal, răspunsul tău va fi trimis ca răspuns citat.
