--- a/fastlane/metadata/sk/release_notes.txt
+++ b/fastlane/metadata/sk/release_notes.txt
@@ -1,2 +1,2 @@
-• This update fixes a bug that briefly caused the launch screen to appear with a bright background even when the Dark theme was selected. If you were inspired by Valentine’s Day and want to turn the lights down even more, we recommend candlelight.
-• Now when you send a quick reply to a specific message by long-pressing on a Signal notification, your response will be sent as a quoted reply.
+• Táto aktualizácia opravuje chybu, ktorá nakrátko spôsobila, že sa úvodná obrazovka zobrazila so svetlým pozadím napriek tomu, že bola zvolená tmavá téma.
+• Keď teraz odošlete rýchlu odpoveď na konkrétnu správu dlhým stlačením Signal upozornenia, vaša odpoveď bude odoslaná ako citovaná odpoveď.
