Do not play animated GIFs, stickers when Reduce Motion is on
This fixes https://github.com/signalapp/Signal-iOS/issues/5949 by:
- Disabling autoplay for GIFs, animated images, and animated stickers when Reduce Motion is on
- Changing the `handleTap` behavior for stickers to play/pause the animation when the sticker is animated and Reduce Motion is on
- Adding a new “Show Sticker Pack” item to the context menu when long-pressing a sticker, so that it’s still possible to see the pack when Reduce motion is enabled
- Adding play button icons on top of GIFs and animated stickers to indicate that tapping will play the animation

This also adds 2 new translation strings (for the “Show Sticker Pack” menu item). Unfortunately, I only know English, so that’s the only language I’ve added the translations to.

This is also my first contribution to the Signal codebase, so please let me know if I should’ve done something a different way! I tried to make my changes as minimally disruptive as possible, and I don’t know whether I’ve done that at the expense of following existing style/conventions.

--- a/Signal/translations/en.lproj/Localizable.strings
+++ b/Signal/translations/en.lproj/Localizable.strings
@@ -1469,6 +1469,9 @@
 "CONTEXT_MENU_SHARE_MEDIA" = "Share";
 
 /* Context menu button title */
+"CONTEXT_MENU_SHOW_STICKER_PACK" = "Show Sticker Pack";
+
+/* Context menu button title */
 "CONTEXT_MENU_SPEAK_MESSAGE" = "Speak";
 
 /* Context menu button title */
@@ -4398,6 +4401,9 @@
 
 /* Action sheet button title */
 "MESSAGE_ACTION_SHARE_MEDIA" = "Share Media";
+
+/* Aciton sheet button title */
+"MESSAGE_ACTION_SHOW_STICKER_PACK" = "Show Sticker Pack";
 
 /* Action sheet accessibility label */
 "MESSAGE_ACTION_SPEAK_MESSAGE" = "Speak Message";
